--- a/2017.md
+++ b/2017.md
@@ -195,6 +195,7 @@
  - [daphnied](https://github.com/daphnied)
  - [rpottsoh](https://github.com/rpottsoh)
  - [trymnilsen](https://github.com/trymnilsen)
+ - [sachin](https://github.com/ashishkrishan1995)
  - [DrevanTonder](https://github.com/DrevanTonder)
  - [mconcannon](https://github.com/mconcannon)
  - [scrabill](https://github.com/scrabill)
